fix some sonar code issues
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>